Bug 584962 - automatic CC to self stripped on Reply All. r=bienvenu